# ieee-papers-mapper

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  Makefile  README.md  about.html  conftest.py  docker-compose.yml  index.html  mkdocs.yml  presentation_for_demo.odp  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
about/: index.html
data/processed/: machine_learning_20241126_160712.csv
data/raw/: computer_science_20241126_160713.csv  energy_20241126_160712.csv  machine_learning_20241126_160712.csv  machine_learning_small.csv  obc.csv
data/test_sets/: TESTSET_Charger_answered.xlsx  TESTSET_GaN.xlsx  TESTSET_GaN_answered.xlsx  TESTSET_Inverter_answered.xlsx
developer_guide/: api_reference.html  code_structure.html
developer_guide/api_reference/: index.html
developer_guide/code_structure/: index.html
developer_guide/testing_runbook/: index.html
docs/: about.md  index.md
extras/: Institute Mapping - Manually.xlsx  Keywords by Jietse.url  SMSSpamCollection.xlsx
ieee_papers_mapper/: demo.ipynb  ieee_papers.db
monitoring/: prometheus.yml
old/: DataEdit_Geoloc_API.ipynb  Scheduler.ipynb  TESTING.ipynb  TESTSET_3_ZeroShot_DC-DC.ipynb  TESTSET_3_ZeroShot_Inverter.ipynb  TESTSET_3_ZeroShot_OBC.ipynb
scripts/: seed_dummy_data.py
search/: search_index.json
src/: classification.py  classify_papers.py  config.py  dash_webapp.py  data_extraction.py  data_preprocessing.py  database.py  get_papers.py  main.py  main_old.py  process_papers.py  scheduler.py
tests/: test_classify_papers.py  test_data_extraction.py  test_database.py  test_get_papers.py  test_metrics.py  test_pipeline.py  test_process_papers.py  test_scheduler.py
user_guide/: installation.html  overview.html  usage.html
workspace/: DataEdit_Geoloc_API.ipynb  DataEdit_Geoloc_ZeroShot.ipynb  TESTSET_1_Create.ipynb  TESTSET_3_ZeroShot_GaN.ipynb  TESTSET_3_ZeroShot_Inverter.ipynb  TESTSET_3_ZeroShot_OBC.ipynb
(+93 files in other folders)
